--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Repo Searcher</string>
+    <string name="search_fragment_name">Search Fragment</string>
 </resources>
